--- a/classification_final.ipynb
+++ b/classification_final.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "# generate 2d classification dataset\n",
     "X, y = make_blobs(n_samples=100, centers=2, n_features=2, random_state=1)\n",
-    "print(X)\n",
+    "# print(X)\n",
     "# scatter plot, dots colored by class value\n",
     "df = DataFrame(dict(x=X[:,0], y=X[:,1], label=y))\n",
     "colors = {0:'red', 1:'blue',}\n",
